--- a/signal.studio.core/.editorconfig
+++ b/signal.studio.core/.editorconfig
@@ -76,7 +76,7 @@ dotnet_style_object_initializer = true:suggestion
 #Style - implicit and explicit types
 
 #prefer var over explicit type in all cases, unless overridden by another code style rule
-csharp_style_var_elsewhere = true:suggestion
+csharp_style_var_elsewhere = true:none
 
 #Style - language keyword and framework type options
 
@@ -114,3 +114,6 @@ csharp_style_unused_value_expression_statement_preference = unused_local_variabl
 
 # IDE0058: Expression value is never used
 dotnet_diagnostic.IDE0058.severity = none
+
+# IDE0008: Use explicit type
+dotnet_diagnostic.IDE0008.severity = none
