--- a/SignalStudio.Example/SignalStudio.Example.csproj
+++ b/SignalStudio.Example/SignalStudio.Example.csproj
@@ -4,11 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EB0B42AA-8EB3-493E-AAAA-4864E7D0ECAC}</ProjectGuid>
+    <ProjectGuid>{7BA3488D-450F-4EDC-AC89-93C1B7E41FB1}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>SignalStudio.Core</RootNamespace>
-    <AssemblyName>SignalStudio.Core</AssemblyName>
-    <LangVersion>8.0</LangVersion>
+    <RootNamespace>SignalStudio.Example</RootNamespace>
+    <AssemblyName>SignalStudio.Example</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -56,17 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="RelayCommand.cs" />
-    <Compile Include="Service\Resolver.cs" />
-    <Compile Include="Schema.cs" />
-    <Compile Include="View\TabView.xaml.cs">
-      <DependentUpon>TabView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\ToolView.xaml.cs">
-      <DependentUpon>ToolView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="View\WorkspaceView.xaml.cs">
-      <DependentUpon>WorkspaceView.xaml</DependentUpon>
+    <Compile Include="Tool\SolutionTool.xaml.cs">
+      <DependentUpon>SolutionTool.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -80,15 +70,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="View\TabView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\ToolView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\WorkspaceView.xaml">
+    <Page Include="Tool\SolutionTool.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -111,7 +93,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include=".editorconfig" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -121,10 +102,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Autofac">
-      <Version>6.2.0</Version>
-    </PackageReference>
+    <ProjectReference Include="..\signal.studio.core\SignalStudio.Core.csproj">
+      <Project>{eb0b42aa-8eb3-493e-aaaa-4864e7d0ecac}</Project>
+      <Name>SignalStudio.Core</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
