--- a/signal.studio.core/.editorconfig
+++ b/signal.studio.core/.editorconfig
@@ -1,4 +1,4 @@
-# Rules in this file were initially inferred by Visual Studio IntelliCode from the C:\Users\metin\Desktop\project\signal-studio\signal.studio.core\ codebase based on best match to current usage at 8/4/2021
+# Rules in this file were initially inferred by Visual Studio IntelliCode from the C:\Users\dionysos\Desktop\project\signal.studio\signal.studio.core\ codebase based on best match to current usage at 8/9/2021
 # You can modify the rules from these initially generated values to suit your own policies
 # You can learn more about editorconfig here: https://docs.microsoft.com/en-us/visualstudio/ide/editorconfig-code-style-settings-reference
 [*.cs]
@@ -8,18 +8,6 @@
 
 #use soft tabs (spaces) for indentation
 indent_style = space
-
-#Formatting - indentation options
-
-#indent switch case contents.
-csharp_indent_case_contents = true
-#indent switch labels
-csharp_indent_switch_labels = true
-
-#Formatting - new line options
-
-#require members of object initializers to be on the same line
-csharp_new_line_before_members_in_object_initializers = false
 
 #Formatting - organize using options
 
@@ -54,29 +42,24 @@ csharp_preserve_single_line_blocks = true
 
 #Style - Code block preferences
 
-#prefer curly braces even for one line of code
-csharp_prefer_braces = true:suggestion
+#prefer no curly braces if allowed
+csharp_prefer_braces = false:suggestion
 
 #Style - expression bodied member options
 
-#prefer expression-bodied members for accessors
-csharp_style_expression_bodied_accessors = true:suggestion
+#prefer block bodies for accessors
+csharp_style_expression_bodied_accessors = false:none
 #prefer block bodies for constructors
 csharp_style_expression_bodied_constructors = false:suggestion
 #prefer block bodies for methods
 csharp_style_expression_bodied_methods = false:suggestion
-#prefer expression-bodied members for properties
-csharp_style_expression_bodied_properties = true:suggestion
-
-#Style - Expression-level  preferences
-
-#prefer objects to be initialized using object initializers when possible
-dotnet_style_object_initializer = true:suggestion
 
 #Style - implicit and explicit types
 
 #prefer var over explicit type in all cases, unless overridden by another code style rule
 csharp_style_var_elsewhere = true:none
+#prefer var when the type is already mentioned on the right-hand side of a declaration expression
+csharp_style_var_when_type_is_apparent = true:none
 
 #Style - language keyword and framework type options
 
@@ -96,24 +79,28 @@ dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggest
 #Style - Modifier preferences
 
 #when this rule is set to a list of modifiers, prefer the specified ordering.
-csharp_preferred_modifier_order = public,private,protected,readonly:suggestion
+csharp_preferred_modifier_order = public,private,internal,static,readonly:suggestion
 
 #Style - qualification options
 
 #prefer events not to be prefaced with this. or Me. in Visual Basic
-dotnet_style_qualification_for_event = false:suggestion
+dotnet_style_qualification_for_event = false:none
 #prefer fields not to be prefaced with this. or Me. in Visual Basic
-dotnet_style_qualification_for_field = false:suggestion
-#prefer methods not to be prefaced with this. or Me. in Visual Basic
-dotnet_style_qualification_for_method = false:suggestion
+dotnet_style_qualification_for_field = false:none
+#prefer methods to be prefaced with this. in C# or Me. in Visual Basic
+dotnet_style_qualification_for_method = true:none
 #prefer properties not to be prefaced with this. or Me. in Visual Basic
-dotnet_style_qualification_for_property = false:suggestion
-
-# IDE0058: Expression value is never used
-csharp_style_unused_value_expression_statement_preference = unused_local_variable
-
-# IDE0058: Expression value is never used
-dotnet_diagnostic.IDE0058.severity = none
+dotnet_style_qualification_for_property = false:none
+insert_final_newline=true
 
 # IDE0008: Use explicit type
 dotnet_diagnostic.IDE0008.severity = none
+
+# IDE0009: Member access should be qualified.
+dotnet_diagnostic.IDE0009.severity = none
+
+# IDE0027: Use block body for accessors
+dotnet_diagnostic.IDE0027.severity = none
+
+# IDE0058: Expression value is never used
+dotnet_diagnostic.IDE0058.severity = none
