--- a/signal.studio.core/.editorconfig
+++ b/signal.studio.core/.editorconfig
@@ -52,7 +52,7 @@ csharp_style_expression_bodied_accessors = false:none
 #prefer block bodies for constructors
 csharp_style_expression_bodied_constructors = false:suggestion
 #prefer block bodies for methods
-csharp_style_expression_bodied_methods = false:suggestion
+csharp_style_expression_bodied_methods = true:suggestion
 
 #Style - implicit and explicit types
 
