--- a/signal.studio.workspace/Signal.Studio.Workspace.csproj
+++ b/signal.studio.workspace/Signal.Studio.Workspace.csproj
@@ -49,11 +49,18 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\Converters.cs" />
     <Compile Include="Common\ToolPosition.cs" />
+    <Compile Include="Common\VariableReference.cs" />
+    <Compile Include="IToolBase.cs" />
+    <Compile Include="IToolSizeState.cs" />
     <Compile Include="IToolVisibleState.cs" />
+    <Compile Include="Model\IToolModel.cs" />
+    <Compile Include="Model\ToolModel.cs" />
     <Compile Include="Service\Resolver.cs" />
     <Compile Include="Service\StoreService.cs" />
     <Compile Include="Store\ToolAction.cs" />
+    <Compile Include="Store\ToolBuilder.cs" />
     <Compile Include="Store\ToolState.cs" />
     <Compile Include="Store\ToolStore.cs" />
     <Compile Include="View\ToolContainer.xaml.cs">
@@ -98,6 +105,9 @@
   <ItemGroup>
     <PackageReference Include="Autofac">
       <Version>6.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Text.Json">
+      <Version>5.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
