--- a/signal.studio.workspace/Signal.Studio.Workspace.csproj
+++ b/signal.studio.workspace/Signal.Studio.Workspace.csproj
@@ -39,7 +39,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
@@ -50,11 +49,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\Converters.cs" />
+    <Compile Include="Common\StateXmlParser.cs" />
+    <Compile Include="Common\StoreXmlParser.cs" />
     <Compile Include="Common\ToolPosition.cs" />
     <Compile Include="Common\VariableReference.cs" />
     <Compile Include="IToolBase.cs" />
-    <Compile Include="IToolSizeState.cs" />
-    <Compile Include="IToolVisibleState.cs" />
     <Compile Include="Model\IToolModel.cs" />
     <Compile Include="Model\ToolModel.cs" />
     <Compile Include="Service\Resolver.cs" />
@@ -69,6 +68,10 @@
     <Compile Include="View\ToolPanel.xaml.cs">
       <DependentUpon>ToolPanel.xaml</DependentUpon>
     </Compile>
+    <Page Include="Resource\Resource.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\ToolContainer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -105,9 +108,6 @@
   <ItemGroup>
     <PackageReference Include="Autofac">
       <Version>6.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Text.Json">
-      <Version>5.0.2</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
